--- a/IS403Project1/IS403Project1.csproj
+++ b/IS403Project1/IS403Project1.csproj
@@ -109,6 +109,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\myJS.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -135,8 +136,8 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Missions\Index.cshtml" />
-	<Content Include="Views\Missions\DisplayMission.cshtml" />
-	<None Include="Web.Debug.config">
+    <Content Include="Views\Missions\DisplayMission.cshtml" />
+    <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
     <None Include="Web.Release.config">
