--- a/IS403Project1/Views/web.config
+++ b/IS403Project1/Views/web.config
@@ -23,6 +23,7 @@
 
   <appSettings>
     <add key="webpages:Enabled" value="false" />
+    <add key="webpages:Version" value="2.0.0.0" />
   </appSettings>
 
   <system.webServer>
