--- a/IS403Project1/IS403Project1.csproj
+++ b/IS403Project1/IS403Project1.csproj
@@ -95,6 +95,7 @@
     <Content Include="Content\Images\Brazil.png" />
     <Content Include="Content\Images\Canada.png" />
     <Content Include="Content\Images\Russia.png" />
+    <Content Include="Content\Images\sebastiano-piazzi-tI_DEyjWOkY-unsplash.jpg" />
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
