--- a/IS403Project1/IS403Project1.csproj
+++ b/IS403Project1/IS403Project1.csproj
@@ -94,8 +94,8 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Images\Brazil.png" />
     <Content Include="Content\Images\Canada.png" />
+    <Content Include="Content\Images\hero-1600px.jpg" />
     <Content Include="Content\Images\Russia.png" />
-    <Content Include="Content\Images\sebastiano-piazzi-tI_DEyjWOkY-unsplash.jpg" />
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
